--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -836,6 +836,11 @@ div.accountWrapper div.floatingBox {
 
 }
 
+#orderWrapper div ul li.outOfStock label:hover {
+	background-color: rgba(36,145,255,0.76);
+
+}
+
 #orderWrapper div ul {
 	list-style-type: none;
 }
@@ -891,10 +896,13 @@ div.accountWrapper div.floatingBox {
 	opacity:0.;
 }
 
-.outOfStock label::after{
-	/*content:"- (currently unavailable)";*/
-}
 
 .outOfStock{
 	opacity:0.5;
 }
+
+.outOfStock > label:hover {
+	background-color: rgba(36,145,255,0.76);
+	height: 100%;
+}
+
