--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -657,6 +657,37 @@ div#addItemFormWrapper {
 	display: block;
 }
 
+div#addItemFormWrapper label {
+	background-color: rgba(36,145,255,0.0);
+	border-bottom: 1px solid rgba(0,0,0,0.15);
+	padding:0.75em 0;
+	font-family: 'Lato';
+	font-weight: bold;
+	font-size: 1.25em;
+	color:rgba(0,0, 0, .25);
+	width:10em;
+	display: block;
+	-webkit-padding-start:0px;
+	width: 20%;
+	text-align: center;
+	float:left;
+	margin-bottom: 1em;
+}
+
+div#addItemFormWrapper  label:hover {
+	background-color: rgba(36,145,255,0.25);
+}
+
+div#addItemFormWrapper input[type='radio']:checked + label{
+    background-color:rgba(36,145,255,0.50);
+    color:rgba(255, 255, 255, 1);
+
+}
+
+div#addItemFormWrapper input[type='radio'] {
+	display:none; 
+}
+
 div.typeSelect:hover {
 	transition: border-left-width 0.3s ease-out;
 	border-left: 2px solid rgba(36,145,255,0.2);
