--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -949,3 +949,20 @@ div.accountWrapper div.floatingBox {
 	height: 100%;
 }
 
+/*
+#pickedItems  li {
+	background-color: rgba(36,145,255,0.5);
+	border: 1px solid rgba(0,0,0,0.15);
+	padding:0.5em 0;
+	font-family: 'Lato';
+	font-weight: bold;
+	font-size: 1.25em;
+	color:rgba(0,0, 0, .55);
+	display: block;
+	width: 10em;
+	-webkit-padding-start:0px;
+	text-align: center;
+	float:left;
+	margin-bottom: 1em;
+	list-style: none;
+}*/
