--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -686,7 +686,6 @@ div#addItemFormWrapper  label:hover {
 div#addItemFormWrapper input[type='radio']:checked + label{
     background-color:rgba(36,145,255,0.50);
     color:rgba(255, 255, 255, 1);
-
 }
 
 div#addItemFormWrapper input[type='radio'] {
@@ -735,6 +734,15 @@ div#queryInput {
 	border-right: 1px solid rgba(0,0,0,0.15);
 }
 
+#simpleQueryContainer {
+	float:left;
+	width:35%;
+}
+
+#graphSelector label {
+	width:33.33%;
+}
+
 /*div#queryInput input{
 	float:left;
 }
@@ -743,38 +751,80 @@ div#queryInput label {
 	float:left;
 }*/
 
+div#addItemFormWrapper {
+	width:40%;
+	float:right;
+	display: block;
+}
+
+#simpleQueryContainer label {
+	background-color: rgba(36,145,255,0.0);
+	border-bottom: 1px solid rgba(0,0,0,0.15);
+	padding:0.75em 0;
+	font-family: 'Lato';
+	font-weight: bold;
+	font-size: 1.25em;
+	color:rgba(0,0, 0, .25);
+	display: block;
+	-webkit-padding-start:0px;
+	text-align: center;
+	float:left;
+	margin-bottom: 1em;
+}
+
+fieldset#simpleQuery-types label {
+	margin-top: 3%;
+	width:20%;
+}
+
+fieldset#graphSelector label{
+	width:50%;
+}
+
+#simpleQueryContainer  label:hover {
+	background-color: rgba(36,145,255,0.25);
+}
+
+#simpleQueryContainer input[type='radio']:checked + label{
+    background-color:rgba(36,145,255,0.50);
+    color:rgba(255, 255, 255, 1);
+}
+
+#simpleQueryContainer input[type='radio'] {
+	display:none; 
+}
+
+#simpleQueryContainer, .chart {
+	border: 1px solid rgba(0,0,0,0.15);
+}
+
+#simpleQueryContainer fieldset {
+	border: 0;
+}
+
+#simpleQueryContainer {
+	margin: 3%;
+}
+
+#simpleQueryContainer div div label {
+	width: 100%;
+	text-align: center;
+}
+
 div#visuals {
 	float:left;
-	width: 65%;
+	width: 55%;
 	height: 60%;
 	box-sizing:border-box;
 }
 
 div.boxy {
-	padding: 18px;
+	margin-top: 3%;
 	height:100%;
 }
-/*div.data {
-	margin: 2.5%;
-	margin-top: 36px;
-}*/
 
-div.floatingNavigation a {
-	padding: 10px;
-	margin-right: 4px;
-	background-color: #2491FF;
-	color:rgba(255,255,255,0.95);
-	display: inline-block;
-	vertical-align: middle;
-	text-decoration: none;
-}
-
-div.floatingNavigation a:hover {
+#simpleQueryContainer a:hover {
 	background-color: #2491DD;
-}
-
-div#advancedQueryContainer {
-	display:none;
 }
 
 
