--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -900,6 +900,7 @@ div.accountWrapper div.floatingBox {
     text-align: center;
     width: 50%;
     margin:auto;
+    clear:left;
 }
 
 /* Ingredient icon */
