Updated RELEASE and added text explanation on data.php

--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -827,6 +827,10 @@ div.boxy {
 	background-color: #2491DD;
 }
 
+#dataExplain {
+	text-align: center;
+	color: rgba(0, 0, 0, .50);
+}
 
 /****************/
 /* Edit Account */
