--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -855,6 +855,7 @@ div.accountWrapper div.floatingBox {
     overflow-x:scroll;
     overflow:hidden;
     margin:2em 10em;
+    margin: 2em auto;
     width:71em;
     border: 1px solid rgba(0,0,0,0.15);
     height:70%;
